--- a/estate_nursery/views/estate_nursery_culling.xml
+++ b/estate_nursery/views/estate_nursery_culling.xml
@@ -135,10 +135,10 @@
             <field name="arch" type="xml">
                 <tree string="Nursery Culling line View" editable="bottom">
                     <field name="batch_id" string="Batch No" options="{'no_create_edit': True}"/>
-                    <field name="total_seed_DO" readonly="1" string="&#931; Kecambah">
+                    <field name="total_seed_do" readonly="1" string="&#931; Kecambah">
                         {‘readonly_by_pass’: True}</field>
                     <field name="qty_abnormal_batch" readonly="1" string="&#931;Abn Batch Receive">
-                        {‘readonly_by_pass’: True}{‘readonly_by_pass’: True}</field>
+                        {‘readonly_by_pass’: True}</field>
                     <field name="qty_normal_batch" readonly="1" string="&#931;Nor Batch Receive">
                         {‘readonly_by_pass’: True}</field>
                     <field name="culling_location_id" readonly="1" string="Location Culling">
