--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -194,8 +194,8 @@
             <field name="name">Nursery Selection</field>
             <field name="model">estate.nursery.selection</field>
             <field name="arch" type="xml">
-                <tree string="Nursery selection View"
-                      colors="red:state=='draft';red:state=='confirmed'; black:state=='done'" delete="false">
+                <tree string="Nursery selection View" version="9.0"
+                      colors="red:state=='draft';red:state=='confirmed'; black:state=='done'" >
                     <field name="selection_code" string="Selection No"/>
                     <field name="selection_date"/>
                     <field name="selectionstage_id" />
@@ -257,29 +257,33 @@
 
                         <group>
                             <group>
-                                <field name="batch_id" attrs="{'required': [('state','=','draft')],
+                                <field name="batch_id" attrs="{
                                 'readonly': [('state','=','done')]}" domain="[('batch_id','=',batch_id)]"
                                   invisible="1"/>
                                 <field name="selectionstage_id" attrs="{'readonly': [('state','=','done')]}"
                                        options="{'no_create_edit': True}"/>
-                                <field name="date_plant" attrs="{'required': [('state','=','draft')]}" readonly="1"/>
+                                <field name="date_plant" attrs="{'readonly': [('state','=','done')]}"
+                                       colors="red:state=='draft';red:state=='confirmed'; black:state=='done'"
+                                      />
                                 <field name="selection_date"
                                        attrs="{'invisible': [('selectionstage_id','=',False)],
                                  'readonly': [('state','=','done')]}"/>
-                                <field name="age_seed" readonly="1"/>
+                                <field name="age_seed" attrs="{'readonly': [('state','=','done')],
+                                       'invisible': [('state','!=','done')]}" readonly="0"/>
                                 <field name="age_seed_calculate" readonly="1" invisible="1"/>
 
                             </group>
 
                             <group coolspan="10">
                                 <field name="stage_id" invisible="1"/>
-                                <field name="qty_batch" attrs="{'required': [('state','=','draft')]}" readonly="1"/>
+                                <field name="qty_batch"  readonly="1"/>
                                 <field name="qty_plante" string="Quantity Planted Batch"
-                                       attrs="{'invisible': [('state','!=','done')]}" readonly="1">
-                                    {‘readonly_by_pass’: True}
-                                </field>
+                                       attrs="{'readonly': [('state','=','done')],
+                                       'invisible': [('state','!=','done')]}" readonly="0"
+                                        colors="red:state=='draft';red:state=='confirmed'; black:state=='done'"/>
                                 <field name="qty_plant" string="Result Quantity Planted"
-                                       attrs="{'invisible': [('state','!=','done')]}" readonly="1"
+                                       attrs="{'readonly': [('state','=','done')],
+                                       'invisible': [('state','!=','done')]}" readonly="0"
                                        onchange ="_compute_plannormal"/>
                                 <field name="flag_recovery"
                                        attrs="{'readonly': [('state','=','done')],
@@ -289,7 +293,7 @@
 
                         <group coolspan="10" string="Detail Information" attrs="{'invisible':[('state','!=','done')]}">
                             <group>
-                                <field name="qty_abnormal" string="Quantity Afkir"/>
+                                <field name="qty_abnormal" string="Quantity Rejected"/>
                                 <field name="qty_recovery" attrs="{'invisible':[('flag_recovery','=', False)]}"
                                                     string="Quantity Seed Recovery"/>
                             </group>
@@ -305,7 +309,7 @@
                             <notebook>
                                 <page string="Abnormal Information">
                                         <tree>
-                                            <field name="selectionline_ids" track_visibility="onchange" attrs="{'required': [('state','=','draft')],
+                                            <field name="selectionline_ids" track_visibility="onchange" attrs="{
                                                 'readonly': [('state','=','done')]}"
                                                    context="{'tree_view_ref' : 'estate_nursery.view_tree_selectionline',
                                                    'default_batch_id':batch_id}"/>
@@ -316,7 +320,7 @@
                                           attrs="{'invisible':[('flag_recovery','!=', True)]}">
                                         <tree>
                                             <field name="recoverytemp_ids"
-                                                   attrs="{'required': [('state','=','draft')],
+                                                   attrs="{
                                                 'readonly': [('state','=','done')]}"
                                                    context="{'tree_view_ref' : 'estate_nursery.view_tree_recoverytempline'}"/>
                                         </tree>
@@ -327,24 +331,23 @@
                                             <group coolspan="10">
                                                 <group >
                                                     <field name="nursery_lapseday"
-                                                           attrs="{'required': [('state','=','draft')],
+                                                           attrs="{
                                                     'readonly': [('state','!=','draft')]}"/>
                                                     <field name="nursery_lapsemonth"
-                                                           attrs="{'required':
-                                                    [('state','=','draft')], 'readonly': [('state','!=','draft')]}"/>
+                                                           attrs="{'readonly': [('state','!=','draft')]}"/>
                                                     <field name="nursery_information"
                                                            string="Nursery Date Information"/>
                                                 </group>
                                                  <group >
                                                     <field name="nursery_plandate"
                                                            string="Nursery Planing Date"
-                                                           groups="estate.group_agronomi"/>
+                                                           groups="estate.group_agronomi">{‘readonly_by_pass’: True}</field>
                                                     <field name="nursery_plandatemax"
                                                            string="Nursery Planing Date Maximum"
-                                                           groups="estate.group_agronomi"/>
+                                                           groups="estate.group_agronomi">{‘readonly_by_pass’: True}</field>
                                                     <field name="nursery_plandatemin"
                                                            string="Nursery Planing Date Minimum"
-                                                           groups="estate.group_agronomi" />
+                                                           groups="estate.group_agronomi" >{‘readonly_by_pass’: True}</field>
                                                 </group>
                                             </group>
                                         </form>
@@ -433,7 +436,8 @@
             <field name="name">Selection</field>
             <field name="res_model">estate.nursery.selection</field>
             <field name="view_mode">tree,kanban,graph,form</field>
-            <field name="context">{'search_default_by_category': 1}</field>
+            <field name="context">{'search_default_by_category': 1,
+                'readonly_by_pass': ['readonly_batch_id', 'readonly_qty_plante','readonly_date_plant','readonly_age_seed']}</field>
         </record>
         <record model="ir.actions.act_window" id="action_list_selectionstage">
             <field name="name">Selection stage</field>
@@ -447,18 +451,18 @@
         </record>
 
         <!-- MENU -->
-        <menuitem id="nursery_seed_selection"
-                  name="Selection Seed"
-                  parent="nursery_seed_batch"
-                  action="action_list_selection" sequence="15"
-                  groups="estate.group_agronomi"/>
+        <!--<menuitem id="nursery_seed_selection"-->
+                  <!--name="Selection Seed"-->
+                  <!--parent="nursery_seed_batch"-->
+                  <!--action="action_list_selection" sequence="15"-->
+                  <!--groups="estate.group_agronomi"/>-->
         <menuitem id="nursery_line_selection_stage"
                   name="Batch Selection Stage"
-                  parent="estate.estate_master_menu"
+                  parent="estate_seed_menu"
                   action="action_list_selectionstage" />
         <menuitem id="nursery_line_selection_cause"
                   name="Batch Selection Cause"
-                  parent="estate.estate_master_menu"
+                  parent="estate_seed_menu"
                   action="action_list_selectioncause" />
     </data>
 </openerp>
