--- a/estate_workshop/views/estate_master_workshop_schedule.xml
+++ b/estate_workshop/views/estate_master_workshop_schedule.xml
@@ -9,7 +9,7 @@
                 <tree colors="blue:type=='view'">
                     <field name="complete_name"/>
                     <field name="asset_id" string="Asset"/>
-                    <field name="category_id" string="Category"/>
+                    <field name="category_id" string="Category" invisible="1"/>
                     <field name="type" string="Type"/>
                     <field name="type_service"/>
                 </tree>
@@ -23,34 +23,32 @@
             <field name="priority">1</field>
             <field name="arch" type="xml">
                 <form>
-                    <group>
-                        <field name="name"/>
-                        <field name="asset_id" string="Asset"/>
-                        <field name="parent_id" string="Parent"/>
-                    </group>
-                    <group>
+                    <sheet>
                         <group>
-                            <group name="detail" string="Detail">
-                                <field name="category_id"/>
+                            <field name="name"/>
+                            <field name="type"/>
+                            <field name="asset_id" string="Asset"/>
+                            <field name="parent_id" string="Parent"/>
+                        </group>
+                        <group>
+                            <group>
+                            <group name="detail">
+                                <field name="category_id" invisible="1"/>
                                 <field name="odometer"/>
                                 <field name="type_service"/>
-                                <field name="type"/>
                             </group>
                         </group>
-                    </group>
-                    <group  name="tasklist" string="Task List"
-                            attrs="{'invisible': [('type', '=', 'view')]}">
-                         <notebook>
-                            <page>
-                                <field name="mastersheduletask_ids" context="{'tree_view_ref' : 'master_task_line_tree'}"/>
-                            </page>
-                        </notebook>
-                    </group>
+                        </group>
+                        <group  name="tasklist"
+                                attrs="{'invisible': [('type', '=', 'view')]}">
+                            <field name="mastersheduletask_ids" nolabel="1" context="{'tree_view_ref' : 'master_task_line_tree'}"/>
+                        </group>
+                    </sheet>
                 </form>
             </field>
         </record>
 
-        <record model="ir.ui.view" id="view_master_shedule_workshop_tree">
+        <record model="ir.ui.view" id="view_master_shedule_workshop_line_tree">
             <field name="name">Master Shedule Workshop Tree</field>
             <field name="model">estate.master.workshop.shedule.planline</field>
             <field name="priority" eval="1"/>
@@ -83,13 +81,13 @@
 
 
         <record model="ir.actions.act_window" id="action_list_master_shedule_workshop">
-            <field name="name">Action Master Shedule Workshop </field>
+            <field name="name">Master Schedule Plan</field>
             <field name="res_model">estate.master.workshop.shedule.plan</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{"search_default_groupby_category" : True}</field>
+            <field name="context">{"search_default_groupby_asset" : True}</field>
         </record>
 
-        <menuitem id="estate_master_shedule_workshop" name="Master Shedule Plan"
+        <menuitem id="estate_master_shedule_workshop" name="Master Schedule Plan"
                   parent="asset.menu_maintenance_config"
                   action="action_list_master_shedule_workshop"
                   groups="base.group_no_one"/>
