--- a/estate_workshop/views/inherit_hr_contract.xml
+++ b/estate_workshop/views/inherit_hr_contract.xml
@@ -1,6 +1,6 @@
 <openerp>
     <data>
-        <record model="ir.ui.view" id="inherit_hr_conract_wage">
+        <record model="ir.ui.view" id="inherit_hr_contract_wage">
              <field name="name">Inherit wage</field>
              <field name="model">hr.contract</field>
              <field name="inherit_id" ref="hr_contract.hr_contract_view_form"/>
@@ -15,6 +15,17 @@
                          <field name="day" string="Day"/>
                          <field name="hour" string="Hour"/>
                      </group>
+                 </xpath>
+             </field>
+         </record>
+
+        <record model="ir.ui.view" id="inherit_hr_contract_active">
+             <field name="name">Inherit active</field>
+             <field name="model">hr.contract</field>
+             <field name="inherit_id" ref="hr_contract.hr_contract_view_form"/>
+             <field name="arch" type="xml">
+                 <xpath expr="//field[@name='working_hours']" position="after">
+                     <field name="active" string="Active" />
                  </xpath>
              </field>
          </record>
